--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,14 +3,14 @@
   <header>
     <img width="200"  src="/src/jpg/logoffa.png">
     <ul>
-      <li><a target="_blank" rel="noopener" href="https://angular.io/tutorial">HOME</a></li>
-      <li><a target="_blank" rel="noopener" href="https://angular.io/tutorial">ABOUT</a></li>
-      <li><a target="_blank" rel="noopener" href="https://angular.io/tutorial">CLASSES</a></li>
-      <li><a target="_blank" rel="noopener" href="https://angular.io/tutorial">TRAINERS</a></li>
-      <li><a target="_blank" rel="noopener" href="https://angular.io/tutorial">BLOG</a></li>
-      <li><a target="_blank" rel="noopener" href="https://angular.io/tutorial">PAGES</a></li>
-      <li><a target="_blank" rel="noopener" href="https://angular.io/tutorial">SHOP</a></li>
-      <li><a target="_blank" rel="noopener" href="https://angular.io/tutorial">CONTACT</a></li>
+      <li><a target="_blank" rel="noopener" href="#">HOME</a></li>
+      <li><a target="_blank" rel="noopener" href="">ABOUT</a></li>
+      <li><a target="_blank" rel="noopener" href="">CLASSES</a></li>
+      <li><a target="_blank" rel="noopener" href="">TRAINERS</a></li>
+      <li><a target="_blank" rel="noopener" href="">BLOG</a></li>
+      <li><a target="_blank" rel="noopener" href="">PAGES</a></li>
+      <li><a target="_blank" rel="noopener" href="">SHOP</a></li>
+      <li><a target="_blank" rel="noopener" href="">CONTACT</a></li>
     </ul>
   </header>
   <h1>
