--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,8 @@ li{
     display: inline-block;
     margin-left: 3em;
 }
+
+a{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color:white;
+}
